# soy-rs

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
examples/: simple.rs
src/: ast.rs  error.rs  lib.rs  parser.rs  soy.pest  tofu.rs
src/parser/: ast.rs  soy.pest
src/parser/tests/: grammar.rs  mod.rs  parser.rs
