[package]
name = "soy"
version = "0.0.1"
authors = ["Kevin Caffrey"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kcaffrey/soy-rs"
documentation = "https://docs.rs/soy"
keywords = ["soy", "template", "templating", "html", "web"]
categories = ["template-engine"]
edition = "2018"
publish = false

[dependencies]
pest = "2.0"
pest_derive = "2.0"
lazy_static = "1.2.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false